k8s/storage-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-service
  namespace: lissa-fit
  labels:
    app: storage-service
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: storage-service
  template:
    metadata:
      labels:
        app: storage-service
        version: v1
      annotations:
        prometheus.io/port: "8085"
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: storage-service
          image: mihailovpasha/storage-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
              name: http
              protocol: TCP
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
