k8s/storage-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
  namespace: lissa-fit
  labels:
    app: storage-service
spec:
  type: ClusterIP
  selector:
    app: storage-service
  ports:
    - port: 80
      targetPort: 8085
      name: http
      protocol: TCP
  sessionAffinity: None
