k8s/storage-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-service-ingress
  namespace: lissa-fit
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: traefik
  rules:
    - host: lissa-fit.storage-service.com
      http:
        paths:
          - path: /v1/users/([^/]+)/dashboard(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 80
          - path: /v1/users/([^/]+)/metrics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 80
          - path: /v1/users/([^/]+)/activities(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 80
          - path: /v1/event-types(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 80
          - path: /v1/internal/users/([^/]+)/dashboard(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: storage-service
                port:
                  number: 80
